apps/ecdysis/frontend-uat/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecdysis-uat-ingress
  namespace: ecdysis
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    external-dns.alpha.kubernetes.io/hostname: ecdysis-uat.amer.dev
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  ingressClassName: infra-traefik
  tls:
    - hosts:
        - ecdysis-uat.amer.dev
      secretName: ecdysis-uat-amer-dev-tls
  rules:
    - host: ecdysis-uat.amer.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: moltbook-frontend-uat
                port:
                  number: 80
